@@ -19,6 +19,8 @@ Post-v2.17.0
    - OVSDB:
      * 'relay' service model now supports transaction history, i.e. honors the
        'last-txn-id' field in 'monitor_cond_since' requests from clients.
+   - Linux datapath:
+     * Add support for offloading the check_pkt_len action.
 
 
 v2.17.0 - 17 Feb 2022
